--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "bugs": {
     "url": "https://github.com/sidebase/nuxt-session/issues/new"
   },
-  "homepage": "https://github.com/sidebase/nuxt-session",
-  "name": "@sidebase/nuxt-session",
+  "homepage": "https://github.com/samsep101/nuxt-session",
+  "name": "@samsep101/nuxt-session",
   "version": "0.2.8",
   "license": "MIT",
   "type": "module",
